# graphcompass

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_pypi.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
notebooks/cellular_neighborhoods/: 01_neighborhood_enrichment_mibitof.ipynb  01_shz_mibitof_breast_cancer.ipynb  02_lm_models_mibitof_python.ipynb  02_lm_models_mibitof_r.ipynb  02_lm_models_zscore_nEnrich_mibitof_breast_cancer.ipynb
notebooks/filtration_curves/: filtration_curves_mibitof.ipynb  filtration_curves_visium.ipynb
notebooks/portrait/: portrait_mibitof.ipynb  portrait_stereoseq.ipynb  portrait_visium.ipynb
notebooks/processing/: processing_mibitof.ipynb
notebooks/tutorials/: MIBITOF_breast_cancer.ipynb
notebooks/wlkernel/: wlkernel_mibitof.ipynb  wlkernel_stereoseq.ipynb  wlkernel_visium.ipynb
src/graphcompass/: __init__.py  __main__.py
src/graphcompass/datasets/: __init__.py  _dataset.py  _dataset.pyi
src/graphcompass/imports/wwl_package/: __init__.py  propagation_scheme.py  wwl.py
src/graphcompass/pl/: _WLkernel.py  __init__.py  _distance.py  _filtration_curves.py  utils.py
src/graphcompass/tl/: _WLkernel.py  __init__.py  _distance.py  _filtration_curves.py  utils.py
tests/: __init__.py  test_main.py
